// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useProductList can fetch next page 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Mg==",
    "name": "Apple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-510x510.png",
    },
  },
]
`;

exports[`useProductList can fetch next page 2`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Mg==",
    "name": "Apple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3NA==",
    "name": "Banana Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-510x510.png",
    },
  },
]
`;

exports[`useProductList can fetch product by id 1`] = `
Object {
  "__typename": "Product",
  "attributes": Array [
    Object {
      "__typename": "SelectedAttribute",
      "attribute": Object {
        "__typename": "Attribute",
        "id": "QXR0cmlidXRlOjIx",
        "name": "ABV",
        "slug": "abv",
      },
      "values": Array [
        Object {
          "__typename": "AttributeValue",
          "id": "QXR0cmlidXRlVmFsdWU6Njk=",
          "name": "6.7%",
        },
      ],
    },
  ],
  "category": Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTU=",
    "name": "Alcohol",
    "products": Object {
      "__typename": "ProductCountableConnection",
      "edges": Array [
        Object {
          "__typename": "ProductCountableEdge",
          "node": Object {
            "__typename": "Product",
            "category": Object {
              "__typename": "Category",
              "id": "Q2F0ZWdvcnk6MTU=",
              "name": "Alcohol",
            },
            "id": "UHJvZHVjdDo4MQ==",
            "name": "Red Wine",
            "pricing": Object {
              "__typename": "ProductPricingInfo",
              "onSale": true,
              "priceRange": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                },
              },
              "priceRangeUndiscounted": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
            },
            "thumbnail": Object {
              "__typename": "Image",
              "alt": "",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-red_LFqwInS-thumbnail-255x255.png",
            },
            "thumbnail2x": Object {
              "__typename": "Image",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-red_LFqwInS-thumbnail-510x510.png",
            },
          },
        },
        Object {
          "__typename": "ProductCountableEdge",
          "node": Object {
            "__typename": "Product",
            "category": Object {
              "__typename": "Category",
              "id": "Q2F0ZWdvcnk6MTU=",
              "name": "Alcohol",
            },
            "id": "UHJvZHVjdDo4NA==",
            "name": "Seaman Beer",
            "pricing": Object {
              "__typename": "ProductPricingInfo",
              "onSale": true,
              "priceRange": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                },
              },
              "priceRangeUndiscounted": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
            },
            "thumbnail": Object {
              "__typename": "Image",
              "alt": "",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-255x255.png",
            },
            "thumbnail2x": Object {
              "__typename": "Image",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-510x510.png",
            },
          },
        },
        Object {
          "__typename": "ProductCountableEdge",
          "node": Object {
            "__typename": "Product",
            "category": Object {
              "__typename": "Category",
              "id": "Q2F0ZWdvcnk6MTU=",
              "name": "Alcohol",
            },
            "id": "UHJvZHVjdDo4Mw==",
            "name": "Seaman Lager",
            "pricing": Object {
              "__typename": "ProductPricingInfo",
              "onSale": false,
              "priceRange": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
              "priceRangeUndiscounted": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
            },
            "thumbnail": Object {
              "__typename": "Image",
              "alt": "",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-02_1_VCwt5Vl-thumbnail-255x255.png",
            },
            "thumbnail2x": Object {
              "__typename": "Image",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-02_1_VCwt5Vl-thumbnail-510x510.png",
            },
          },
        },
      ],
    },
  },
  "descriptionJson": "{\\"blocks\\": [{\\"key\\": \\"\\", \\"data\\": {}, \\"text\\": \\"Best beer on the seven seas. A dark ale for when the dark clouds gather overhead. The nutty nautical taste that sailors love.\\", \\"type\\": \\"unstyled\\", \\"depth\\": 0, \\"entityRanges\\": [], \\"inlineStyleRanges\\": []}], \\"entityMap\\": {}}",
  "id": "UHJvZHVjdDo4NA==",
  "images": Array [
    Object {
      "__typename": "ProductImage",
      "id": "UHJvZHVjdEltYWdlOjE5",
      "url": "http://localhost:8000/media/products/saleordemoproduct_beer-01_1_vjCaZry.png",
    },
    Object {
      "__typename": "ProductImage",
      "id": "UHJvZHVjdEltYWdlOjIw",
      "url": "http://localhost:8000/media/products/saleordemoproduct_beer-01_2_2rzsOLb.png",
    },
  ],
  "isAvailable": true,
  "name": "Seaman Beer",
  "pricing": Object {
    "__typename": "ProductPricingInfo",
    "onSale": true,
    "priceRange": Object {
      "__typename": "TaxedMoneyRange",
      "start": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
      },
      "stop": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
      },
    },
    "priceRangeUndiscounted": Object {
      "__typename": "TaxedMoneyRange",
      "start": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
      },
      "stop": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
      },
    },
  },
  "seoDescription": "Best beer on the seven seas. A dark ale for when the dark clouds gather overhead. The nutty nautical taste that sailors love.",
  "seoTitle": "",
  "thumbnail": Object {
    "__typename": "Image",
    "alt": "",
    "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-255x255.png",
  },
  "thumbnail2x": Object {
    "__typename": "Image",
    "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-510x510.png",
  },
  "variants": Array [
    Object {
      "__typename": "ProductVariant",
      "attributes": Array [],
      "id": "UHJvZHVjdFZhcmlhbnQ6MTk2",
      "images": Array [],
      "isAvailable": true,
      "name": "",
      "pricing": Object {
        "__typename": "VariantPricingInfo",
        "onSale": true,
        "price": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "priceUndiscounted": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 5,
            "currency": "USD",
          },
        },
      },
      "quantityAvailable": 50,
      "sku": "98616713",
    },
  ],
}
`;

exports[`useProductList can fetch product by slug 1`] = `
Object {
  "__typename": "Product",
  "attributes": Array [
    Object {
      "__typename": "SelectedAttribute",
      "attribute": Object {
        "__typename": "Attribute",
        "id": "QXR0cmlidXRlOjIx",
        "name": "ABV",
        "slug": "abv",
      },
      "values": Array [
        Object {
          "__typename": "AttributeValue",
          "id": "QXR0cmlidXRlVmFsdWU6Njk=",
          "name": "6.7%",
        },
      ],
    },
  ],
  "category": Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTU=",
    "name": "Alcohol",
    "products": Object {
      "__typename": "ProductCountableConnection",
      "edges": Array [
        Object {
          "__typename": "ProductCountableEdge",
          "node": Object {
            "__typename": "Product",
            "category": Object {
              "__typename": "Category",
              "id": "Q2F0ZWdvcnk6MTU=",
              "name": "Alcohol",
            },
            "id": "UHJvZHVjdDo4MQ==",
            "name": "Red Wine",
            "pricing": Object {
              "__typename": "ProductPricingInfo",
              "onSale": true,
              "priceRange": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3.5,
                    "currency": "USD",
                  },
                },
              },
              "priceRangeUndiscounted": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
            },
            "thumbnail": Object {
              "__typename": "Image",
              "alt": "",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-red_LFqwInS-thumbnail-255x255.png",
            },
            "thumbnail2x": Object {
              "__typename": "Image",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-red_LFqwInS-thumbnail-510x510.png",
            },
          },
        },
        Object {
          "__typename": "ProductCountableEdge",
          "node": Object {
            "__typename": "Product",
            "category": Object {
              "__typename": "Category",
              "id": "Q2F0ZWdvcnk6MTU=",
              "name": "Alcohol",
            },
            "id": "UHJvZHVjdDo4NA==",
            "name": "Seaman Beer",
            "pricing": Object {
              "__typename": "ProductPricingInfo",
              "onSale": true,
              "priceRange": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 3,
                    "currency": "USD",
                  },
                },
              },
              "priceRangeUndiscounted": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
            },
            "thumbnail": Object {
              "__typename": "Image",
              "alt": "",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-255x255.png",
            },
            "thumbnail2x": Object {
              "__typename": "Image",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-510x510.png",
            },
          },
        },
        Object {
          "__typename": "ProductCountableEdge",
          "node": Object {
            "__typename": "Product",
            "category": Object {
              "__typename": "Category",
              "id": "Q2F0ZWdvcnk6MTU=",
              "name": "Alcohol",
            },
            "id": "UHJvZHVjdDo4Mw==",
            "name": "Seaman Lager",
            "pricing": Object {
              "__typename": "ProductPricingInfo",
              "onSale": false,
              "priceRange": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
              "priceRangeUndiscounted": Object {
                "__typename": "TaxedMoneyRange",
                "start": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
                "stop": Object {
                  "__typename": "TaxedMoney",
                  "gross": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                  "net": Object {
                    "__typename": "Money",
                    "amount": 5,
                    "currency": "USD",
                  },
                },
              },
            },
            "thumbnail": Object {
              "__typename": "Image",
              "alt": "",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-02_1_VCwt5Vl-thumbnail-255x255.png",
            },
            "thumbnail2x": Object {
              "__typename": "Image",
              "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-02_1_VCwt5Vl-thumbnail-510x510.png",
            },
          },
        },
      ],
    },
  },
  "descriptionJson": "{\\"blocks\\": [{\\"key\\": \\"\\", \\"data\\": {}, \\"text\\": \\"Best beer on the seven seas. A dark ale for when the dark clouds gather overhead. The nutty nautical taste that sailors love.\\", \\"type\\": \\"unstyled\\", \\"depth\\": 0, \\"entityRanges\\": [], \\"inlineStyleRanges\\": []}], \\"entityMap\\": {}}",
  "id": "UHJvZHVjdDo4NA==",
  "images": Array [
    Object {
      "__typename": "ProductImage",
      "id": "UHJvZHVjdEltYWdlOjE5",
      "url": "http://localhost:8000/media/products/saleordemoproduct_beer-01_1_vjCaZry.png",
    },
    Object {
      "__typename": "ProductImage",
      "id": "UHJvZHVjdEltYWdlOjIw",
      "url": "http://localhost:8000/media/products/saleordemoproduct_beer-01_2_2rzsOLb.png",
    },
  ],
  "isAvailable": true,
  "name": "Seaman Beer",
  "pricing": Object {
    "__typename": "ProductPricingInfo",
    "onSale": true,
    "priceRange": Object {
      "__typename": "TaxedMoneyRange",
      "start": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
      },
      "stop": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 3,
          "currency": "USD",
        },
      },
    },
    "priceRangeUndiscounted": Object {
      "__typename": "TaxedMoneyRange",
      "start": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
      },
      "stop": Object {
        "__typename": "TaxedMoney",
        "gross": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
        "net": Object {
          "__typename": "Money",
          "amount": 5,
          "currency": "USD",
        },
      },
    },
  },
  "seoDescription": "Best beer on the seven seas. A dark ale for when the dark clouds gather overhead. The nutty nautical taste that sailors love.",
  "seoTitle": "",
  "thumbnail": Object {
    "__typename": "Image",
    "alt": "",
    "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-255x255.png",
  },
  "thumbnail2x": Object {
    "__typename": "Image",
    "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_vjCaZry-thumbnail-510x510.png",
  },
  "variants": Array [
    Object {
      "__typename": "ProductVariant",
      "attributes": Array [],
      "id": "UHJvZHVjdFZhcmlhbnQ6MTk2",
      "images": Array [],
      "isAvailable": true,
      "name": "",
      "pricing": Object {
        "__typename": "VariantPricingInfo",
        "onSale": true,
        "price": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "priceUndiscounted": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 5,
            "currency": "USD",
          },
        },
      },
      "quantityAvailable": 50,
      "sku": "98616713",
    },
  ],
}
`;

exports[`useProductList can fetch products 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Mg==",
    "name": "Apple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3NA==",
    "name": "Banana Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3OQ==",
    "name": "Bean Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_02_dNXPoKS-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_02_dNXPoKS-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTU=",
    "name": "Black Hoodie",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo01_1_7OtJd0E-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo01_1_7OtJd0E-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTY=",
    "name": "Blue Hoodie",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo02_1_mtuuFZd-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo02_1_mtuuFZd-thumbnail-510x510.png",
    },
  },
]
`;

exports[`useProductList can filter 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4NA==",
    "name": "Seaman Beer",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_Xm3ASfo-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_Xm3ASfo-thumbnail-510x510.png",
    },
  },
]
`;

exports[`useProductList can sort 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4Nw==",
    "name": "Yellow Plimsolls",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_01_1_hxdEA8I-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_01_1_hxdEA8I-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4Mg==",
    "name": "White Wine",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-white_2TRD3SA-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-white_2TRD3SA-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4OA==",
    "name": "White Plimsolls",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_02_1_LKgUR6b-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_02_1_LKgUR6b-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4Ng==",
    "name": "White Parrot Cushion",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cuschion02_2rlBRlJ-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cuschion02_2rlBRlJ-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTg=",
    "name": "White Hoodie",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo04_1_WF6PBIr-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo04_1_WF6PBIr-thumbnail-510x510.png",
    },
  },
]
`;
